--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,12 @@ body {
     font-family: 'Open Sans';
     padding: 20px 80px;
 }
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+*{
+    box-sizing: border-box;
+}
